--- a/ecommerceclient/src/index.css
+++ b/ecommerceclient/src/index.css
@@ -20,3 +20,9 @@ code {
 ::-webkit-scrollbar{
   display: none;
 }
+ 
+@media screen and (max-width:350px) {
+    .mobile{
+       width: 30rem;
+    }
+}
