--- a/ecommerceclient/src/index.css
+++ b/ecommerceclient/src/index.css
@@ -17,8 +17,23 @@ code {
 @tailwind utilities;
 
 
+.category::-webkit-scrollbar{
+     display: none;
+}
+
 ::-webkit-scrollbar{
-  display: none;
+   width: 0.5vw;
+}
+
+::-webkit-scrollbar-track{
+    background-color: whitesmoke;
+    border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb{
+   background-color: rgb(235, 232, 232);
+   border-radius: 1rem;
+
 }
  
 @media screen and (max-width:350px) { 
